--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,8 @@
     "require": {
         "php": ">=5.6.0",
         "yiisoft/yii2": "^2.0.12",
-        "yiisoft/yii2-bootstrap": "~2.0.0"
+        "yiisoft/yii2-bootstrap": "~2.0.0",
+        "joshtronic/php-loremipsum": "^1.0.2"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.0.0"
